<resources>
    <string name="app_name">Expense App</string>
    <string name="add_expense_label">Add Expense</string>
    <string name="edit_expense_label">Edit Expense</string>
    <string name="delete_expense_label">Delete Expense</string>
    <string name="show_expenses_label">Show Expenses</string>
    <string name="finish_label">Finish</string>
    <string name="add_exp_heading">Add an Expense</string>
    <string name="exp_name_label">Expense Name</string>
    <string name="category_label">Category</string>
    <string name="amount_label">Amount</string>
    <string name="date_label">Date</string>
    <string name="receipt_label">Receipt</string>
    <string name="warning_name">Name cannot be empty</string>
    <string name="warning_category">Please select a category</string>
    <string name="warning_date">Date cannot be empty</string>
    <string name="warning_amount">Amount cannot be empty</string>
    <string name="category_groceries">Groceries</string>
    <string name="category_invoice">Invoice</string>
    <string name="category_transportation">Transportation</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_rent">Rent</string>
    <string name="category_trips">Trips</string>
    <string name="category_utils">Utilities</string>
    <string name="category_others">Others</string>
    <string name="category_hint">Select Category</string>
    <string name="title_activity_select_photo">SelectPhoto</string>
    <string name="select_photo_heading">Select Photo</string>
    <string name="select_picture">Select Picture</string>
    <string name="cancel">CANCEL</string>
    <string name="camera">Camera</string>
    <string name="select_exp_label">Select Expense</string>
    <string name="pick_exp_label">Pick an Expense</string>
    <string name="gallery">Gallery</string>
    <string name="expense_added">Expense added</string>
    <string name="save_label">Save</string>
    <string name="stringDelete">Delete</string>
    <string name="stringExpenseDetails">Expense Details</string>
    <string name="stringName">Name</string>
    <string name="stringCategory">Category</string>
    <string name="stringAmount">Amount</string>
    <string name="stringDate">Date</string>
    <string name="stringReceipt">Receipt</string>
    <string name="stringFinish">Finish</string>
    <string name="no_changes_done">No changes done</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="nothing_to_delete">Nothing to delete</string>
    <string name="nothing_to_edit">Nothing to edit</string>
    <string name="item_deleted">Expense deleted</string>
    <string name="item_updated">Expense updated</string>
</resources>
