<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tvs.expensemanagement.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_expense_label"
                android:id="@+id/addExpense"
                android:layout_margin="@dimen/default_element_margin" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_expense_label"
                android:id="@+id/editExpense"
                android:layout_margin="@dimen/default_element_margin" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_expense_label"
                android:id="@+id/deleteExpense"
                android:layout_margin="@dimen/default_element_margin" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_expenses_label"
                android:id="@+id/showExpense"
                android:layout_margin="@dimen/default_element_margin" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish_label"
                android:id="@+id/finish"
                android:layout_margin="@dimen/default_element_margin" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
