<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tvs.expensemanagement.ShowExpense">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stringExpenseDetails"
        android:id="@+id/textViewDetails"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewDetails"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="300dp"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stringName"
            android:id="@+id/textViewName"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewNameValue"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stringCategory"
            android:id="@+id/textView15"
            android:layout_marginTop="10dp"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewCategoryValue"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stringAmount"
            android:id="@+id/textViewAmount"
            android:layout_marginTop="10dp"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewAmountValue"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/stringDate"
            android:id="@+id/textViewDate"
            android:layout_marginTop="10dp"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textViewDateValue"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_row="3"
            android:layout_column="1" />
    </GridLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stringReceipt"
        android:id="@+id/textViewReceipt"
        android:layout_alignTop="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="164dp"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:id="@+id/imageViewReceipt"
        android:layout_below="@+id/textViewReceipt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringFinish"
        android:id="@+id/buttonFinish"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageViewBackward"
        android:layout_alignBottom="@+id/buttonFinish"
        android:layout_toLeftOf="@+id/buttonFinish"
        android:layout_toStartOf="@+id/buttonFinish"
        android:layout_marginLeft="20dp"
        android:src="@drawable/backward"
        android:clickable="true" />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageViewRewind"
        android:layout_alignBottom="@+id/imageViewBackward"
        android:layout_toLeftOf="@+id/imageViewBackward"
        android:layout_toStartOf="@+id/imageViewBackward"
        android:src="@drawable/rewind"
        android:clickable="true" />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageViewForward"
        android:layout_alignBottom="@+id/buttonFinish"
        android:layout_toRightOf="@+id/buttonFinish"
        android:layout_marginRight="20dp"
        android:src="@drawable/forward"
        android:clickable="true" />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageViewFastForward"
        android:layout_alignBottom="@+id/imageViewForward"
        android:layout_toRightOf="@+id/imageViewForward"
        android:src="@drawable/fast_forward"
        android:clickable="true" />
</RelativeLayout>
