<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddExpense">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_exp_heading"
                android:id="@+id/textView"
                android:textColor="@color/primary_text_default_material_light"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_vertical|center_horizontal"
                android:layout_margin="@dimen/default_element_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/exp_name_label"
                    android:id="@+id/textView2"
                    android:textColor="@color/primary_text_default_material_light" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/expName"
                    android:layout_marginBottom="@dimen/default_element_margin"
                    android:maxLength="50"
                    android:allowUndo="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/default_element_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/category_label"
                    android:id="@+id/textView3"
                    android:textColor="@color/primary_text_default_material_light" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"
                    android:id="@+id/category"
                    android:layout_marginTop="@dimen/default_element_margin"
                    android:layout_marginBottom="@dimen/default_element_margin" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/amount_label"
                    android:id="@+id/textView4"
                    android:textColor="@color/primary_text_default_material_light" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/amount" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/default_element_margin"
                android:layout_marginBottom="@dimen/default_element_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/date_label"
                    android:id="@+id/textView5"
                    android:textColor="@color/primary_text_default_material_light" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:layout_width="290dp"
                        android:layout_height="match_parent"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/date"
                        android:layout_weight="80" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/calendar"
                        android:src="@mipmap/ic_date_range_black_24dp"
                        android:layout_gravity="right"
                        android:layout_weight="20" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/receipt_label"
                    android:id="@+id/textView6"
                    android:textColor="@color/primary_text_default_material_light" />

                <ImageView
                    android:layout_width="108dp"
                    android:layout_height="108dp"
                    android:src="@mipmap/ic_add_to_queue_black_24dp"
                    android:id="@+id/gallery" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_expense_label"
                android:id="@+id/addExpBtn"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
